k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hurc-svc
  namespace: hurc
spec:
  selector:
    app: hurc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
